@@ -60,10 +60,6 @@
 using namespace WebCore;
 using namespace WebKit;
 
-@protocol WKWebProcessPlugInFormDelegatePrivateDeprecated <NSObject>
-- (NSObject <NSSecureCoding> *)_webProcessPlugInBrowserContextController:(WKWebProcessPlugInBrowserContextController *)controller newWillSubmitForm:(WKWebProcessPlugInNodeHandle *)form toFrame:(WKWebProcessPlugInFrame *)frame fromFrame:(WKWebProcessPlugInFrame *)sourceFrame withValues:(NSDictionary *)values;
-@end
-
 @implementation WKWebProcessPlugInBrowserContextController {
     API::ObjectStorage<WebPage> _page;
     WeakObjCPtr<id <WKWebProcessPlugInLoadDelegate>> _loadDelegate;
@@ -434,14 +430,7 @@ static void setUpResourceLoadClient(WKWebProcessPlugInBrowserContextController *
         {
             auto formDelegate = m_controller->_formDelegate.get();
 
-            if ([formDelegate respondsToSelector:@selector(_webProcessPlugInBrowserContextController:newWillSubmitForm:toFrame:fromFrame:withValues:)]) {
-                auto valueMap = adoptNS([[NSMutableDictionary alloc] initWithCapacity:values.size()]);
-                for (const auto& pair : values)
-                    [valueMap setObject:pair.second forKey:pair.first];
-
-                NSObject <NSSecureCoding> *userObject = [(id)formDelegate _webProcessPlugInBrowserContextController:m_controller newWillSubmitForm:wrapper(*InjectedBundleNodeHandle::getOrCreate(formElement).get()) toFrame:wrapper(*frame) fromFrame:wrapper(*sourceFrame) withValues:valueMap.get()];
-                encodeUserObject(userObject, userData);
-            } else if ([formDelegate respondsToSelector:@selector(_webProcessPlugInBrowserContextController:willSubmitForm:toFrame:fromFrame:withValues:)]) {
+            if ([formDelegate respondsToSelector:@selector(_webProcessPlugInBrowserContextController:willSubmitForm:toFrame:fromFrame:withValues:)]) {
                 auto valueMap = adoptNS([[NSMutableDictionary alloc] initWithCapacity:values.size()]);
                 for (const auto& pair : values)
                     [valueMap setObject:pair.second forKey:pair.first];
